[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "vkquick"
version = "1.0.0b6"
description = "Package for quick writing vk chat bots"
license = "MIT"
homepage = "https://github.com/Rhinik/vkquick"
documentation = "https://vkquick.github.io"
authors = ["Kurbatov Yan <deknowny@gmail.com>"]
readme = "README.md"
keywords = [
    "vk", "async", "bots", "quick", "api"
]
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Topic :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.6.1"
huepy = "^1.2.1"
requests = "^2.24.0"
aiohttp = "^3.7.2"
cachetools = "^4.1.1"
typer = "^0.3.2"

# watchgod
watchgod = { version = "^0.6", optional = true }

# json-libs
orjson = { version = "^3.4.6", optional = true }
ujson = { version = "^4.0.1", optional = true }

[tool.poetry.dev-dependencies]
# docs
mkdocs-material = { version = "^5.4.0", optional = true }
mkdocs = { version = "^1.1.2", optional = true }

# tests
pytest = { version = "^6.1.0", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
pytest-mock = { version = "^3.3.1", optional = true }
pytest-asyncio = { version = "^0.14.0", optional = true }

# style
black = { version = "^19.10b0", optional = true }
pylint = { version = "^2.6.0", optional = true }


[tool.poetry.extras]
# user
watchgod = ["watchgod"]
json-libs = ["orjson", "ujson"]
docs = ["mkdocs", "mkdocs-material"]

# dev
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-asyncio"]
style = ["black", "pylint"]


[tool.poetry.urls]
"VK group" = "https://vk.com/vkquick"
"Help chat" = "https://vk.me/join/AJQ1dzLqwBeU7O0H_oJZYNjD"

[tool.poetry.scripts]
vq = "vkquick.__main__:app"

[tool.black]
line-length = 78


