[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "vkquick"
version = "1.0.0b10"
description = "VK API Framework for chat bots"
license = "MIT"
homepage = "https://github.com/Rhinik/vkquick"
documentation = "https://vkquick.rthd.io"
authors = ["Kurbatov Yan <deknowny@gmail.com>"]
readme = "README.md"
keywords = [
    "vk", "async", "bots", "quick", "api"
]
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Python :: 3.9",
    "Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6"
pygments = "^2.6.1"
huepy = "^1.2.1"
aiohttp = "^3.7.2"
cachetools = "^4.1.1"
better-exceptions = "^0.3.3"

# dev tools
watchgod = "^0.6"

# json-libs
orjson = { version = "^3.4.6", optional = true }
ujson = { version = "^4.0.1", optional = true }

# compatibility
typing-extensions = "^3.7.4"
loguru = "^0.5.3"


[tool.poetry.dev-dependencies]
# docs-0.2
mkdocs-material = "^6"
mkdocs = "^1.1.2"
markdown-include = "^0.6.0"

# tests
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.14.0"

# style
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.7.0"
mypy = "^0.812"
tox = "^3.23.0"
mkdocstrings = "^0.15.0"
pymdown-extensions = "^8.1.1"


[tool.poetry.extras]
json-libs = ["orjson", "ujson"]


[tool.poetry.urls]
"VK group" = "https://vk.com/vkquick"
"Help chat" = "https://vk.me/join/AJQ1dzLqwBeU7O0H_oJZYNjD"

[tool.black]
line-length = 78

[tool.isort]
profile = "wemake"
src_paths = ["vkquick", "tests"]
line_length = 78

[tool.mypy]
ignore_missing_imports = true
